--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,21 @@
-
+#CMake version needed
 cmake_minimum_required(VERSION 3.12)
+
+#Project Name - CPPANN
 project(CPPANN)
 
+#CMake C++ Standard
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(${PROJECT_NAME} source/main.cpp source/neurons/BasicNeuron.cpp source/neurons/BasicNeuron.h)
+#Set version number
+set(CPPANN_VERSION_MAJOR 1)
+set(CPPANN_VERSION_MINOR 0)
+
+#Header files
+include_directories(source/neurons)
+
+#Manual include source files
+set(NEURONSOURCE source/neurons/BasicNeuron.cpp source/neurons/BasicConnection.cpp)
+
+#Executable and location of Source (.cpp) files
+add_executable(${PROJECT_NAME} source/main.cpp ${NEURONSOURCE})
