Moved BasicConnections class into own folder and added OperatorConnectiosn that extends connections2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,9 +13,11 @@ set(CPPANN_VERSION_MINOR 0)
 
 #Header files
 include_directories(source/neurons)
+include_directories(source/neurons/connectionss)
 
 #Manual include source files
-set(NEURONSOURCE source/neurons/BasicNeuron.cpp source/neurons/BasicConnection.cpp)
+set(NEURONSOURCE source/neurons/BasicNeuron.cpp)
+set(CONNECTIONSOURCE source/neurons/connections/BasicConnection.cpp)
 
 #Executable and location of Source (.cpp) files
-add_executable(${PROJECT_NAME} source/main.cpp ${NEURONSOURCE})
+add_executable(${PROJECT_NAME} source/main.cpp ${NEURONSOURCE} ${CONNECTIONSOURCE})
